feat: support dynamic managed auth options
